# ragops

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  rag_ops_platform_blueprint_v_2_aurora_open_ai_bedrock_ready.md
.github/workflows/: ci.yml  deploy.yml  pr-summary.yml  publish-pypi.yml  terraform.yml
docs/: WORK_SPLIT.md  api-contract.md  architecture.md  cost-notes.md  frontend-chat-manual.md  local-testing.md  mvp-execution-plan.md  mvp-results.md  mvp.md  product-strategy.md  roadmap.md  runbooks.md  scan-output-spec.md  testing-playbook.md  threat-model.md  user-guide.md
eval/: cases.yaml
frontend/: app.js  index.html  styles.css
manuals/: API_MANUAL.md  ARCHITECTURE_DIAGRAM.md  CODEBASE_MANUAL.md  DATABASE_MANUAL.md
manuals/jad-delgadillo-paylink/: API_MANUAL.md  CODEBASE_MANUAL.md  DATABASE_MANUAL.md
manuals/jad-delgadillo-ragops/: API_MANUAL.md  CODEBASE_MANUAL.md
scripts/: deploy.sh  init_neon.py  local_api.py  local_dev.sh  mock_chat_api.py  package_lambda.sh  pr_summary.py  requirements-lambda.txt  upload_docs.sh
services/api/app/: access.py  chat.py  handler.py  ownership.py  repo_onboarding.py  retriever.py
services/api/tests/: test_access.py  test_chat.py  test_ownership.py  test_retriever.py
services/cli/: eval.py  main.py  project.py  remote.py  repositories.py  user_config.py
services/cli/docgen/: analyzer.py  generator.py  manuals.py
services/cli/tests/: test_chat_shell_ui.py  test_cli_config_commands.py  test_cli_parser.py  test_eval.py  test_manuals.py  test_repositories.py  test_user_config.py
services/core/: bedrock_provider.py  claude_provider.py  config.py  database.py  gemini_provider.py  github_tree.py  groq_provider.py  huggingface_provider.py  logging.py  ollama_provider.py  openai_provider.py  providers.py  schema.sql  storage.py
services/core/tests/: __init__.py  test_database.py  test_providers.py  test_storage.py
services/ingest/app/: chunker.py  handler.py  pipeline.py
services/ingest/tests/: test_chunker.py  test_pipeline.py
terraform/envs/dev/: main.tf
terraform/modules/apigw_lambda/: main.tf
terraform/modules/iam/: main.tf
terraform/modules/s3/: main.tf
