[project]
name = "ragops"
version = "2.0.0"
description = "RAG Ops — Query any codebase with AI. Open-source, Docker-first, BYO API key."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jorge Delgadillo" }]
requires-python = ">=3.11"
keywords = ["rag", "developer-tools", "code-search", "onboarding", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "openai>=1.0",
    "boto3>=1.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "httpx>=0.27.0",
]

[project.scripts]
ragops = "services.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "build>=1.2.0",
    "twine>=5.1.0",
]

[project.urls]
Homepage = "https://github.com/jad-delgadillo/ragops"
Repository = "https://github.com/jad-delgadillo/ragops"
Issues = "https://github.com/jad-delgadillo/ragops/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["services*"]
exclude = ["*.tests", "*.tests.*"]

[tool.setuptools.package-data]
"services.core" = ["schema.sql"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["services"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
